Доделал футер hover на верхней навигации

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<title>Pricing Table</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/style_index.css">
-
+	<link rel="shortcut icon" href="img/icons/favicon.ico" />
+	<link rel="icon" type="image/vnd.microsoft.icon" href="img/icons/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="img/icons/favicon.ico">
+	<link rel="icon" href="img/icons/favicon.ico" /> 
 	<!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,600,700,800,900&display=swap&subset=latin-ext" rel="stylesheet"> <!-- Maven Pro-->
 </head>
@@ -21,11 +24,11 @@
 
 			<ul class="headerNavigation">
 				
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Why MISOCIAL</a></li>
-				<li><a href="#">Features</a></li>
-				<li><a href="#">Articles</a></li>
-				<li><a href="#">Pricing</a></li>
+				<li><a href="#" class="headerNavigation-btn">Home</a></li>
+				<li><a href="#" class="headerNavigation-btn">Why MISOCIAL</a></li>
+				<li><a href="#" class="headerNavigation-btn">Features</a></li>
+				<li><a href="#" class="headerNavigation-btn">Articles</a></li>
+				<li><a href="#" class="headerNavigation-btn">Pricing</a></li>
 				<li><a href="#" class="get-started-btn">GET STARTED</a></li>
 			</ul>
 		</header>
@@ -37,9 +40,9 @@
 			tempor incididunt ut.</p>
 		</div>
 
-		<div class="down-arrow">
-			<a href="#select" id="select2"><img src="../img/icons/down arrow.png" alt="down"></a>
-		</div>
+		<a class="down-arrow" href="#select">
+			<img src="../img/icons/down arrow.png" alt="down">
+		</a>
 	</div>
 
 	<main id="select">
@@ -106,6 +109,35 @@
 				
 		</div>
 	</div>
+
+	<footer>
+		<div class="logo-and-navigation">
+			<div class="logo">
+				<img src="img/icons/symbol.png" alt="logo">
+				<h3>M I S O C I A L</h3>
+			</div>
+
+			<ul class="footerNavigation">
+				<li><a href="#" class="footer-navigation-button" style="color: #756edc;">Home</a></li>
+				<li><a href="#" class="footer-navigation-button">Why MISOCIAL</a></li>
+				<li><a href="#" class="footer-navigation-button">Features</a></li>
+				<li><a href="#" class="footer-navigation-button">Articles</a></li>
+				<li><a href="#" class="footer-navigation-button">Pricing</a></li>
+				<li><a href="#" class="get-started-btn">GET STARTED</a></li>
+			</ul>
+		</div>
+
+		<div class="copyright-and-social">
+			<p class="copyright">© 2017-2020 Mass Impressions & Tranmautritam. Make the right impression.</p>
+			<div class="social">
+				<a href="https://facebook.com/" target="blank" class="social-btn"><img src="img/icons/social/facebook.png" alt="social"></a>
+				<a href="https://twitter.com/" target="blank" class="social-btn"><img src="img/icons/social/twitter.png" alt="social"></a>
+				<a href="https://plus.google.com/" target="blank" class="social-btn"><img src="img/icons/social/google-plus.png" alt="social"></a>
+				<a href="https://instagram.com/" class="social-btn" target="blank"><img src="img/icons/social/instagram.png" alt="social"></a>
+			</div>
+		</div>
+
+	</footer>
 
 <script src="jquery-3.3.1.min.js?speed=0"></script>
 <script src="js scripts/softScroll.js?speed=0"></script>
