--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Pricing Table</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/style_index.css">
+	<link rel="stylesheet" type="text/css" href="styles/media_styles.css">
 	<link rel="shortcut icon" href="img/icons/favicon.ico" />
 	<link rel="icon" type="image/vnd.microsoft.icon" href="img/icons/favicon.ico">
 	<link rel="icon" type="image/x-icon" href="img/icons/favicon.ico">
@@ -12,6 +13,24 @@
 	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,600,700,800,900&display=swap&subset=latin-ext" rel="stylesheet"> <!-- Maven Pro-->
 </head>
 <body>
+
+	<div class="banner-wrapper">
+		<div class="banner-container">
+			<h1>Callback Form</h1>
+			<p class="banner-description">Congratulations! You have selected the plan for you. Now you can fill in our Callback Form and our staff will contact you and will discuss all the details!</p>
+			<form class="form-banner" action="" method="POST">
+				<input id="name" type="text" name="name" class="banner-input" autofocus placeholder="Your first and last name here" required="">
+				<input id="tel" type="tel" name="phoneNumber" class="banner-input tel" required=""  placeholder="Phone number here" pattern="+7 ([0-9]{,3}) [0-9]{,3} [0-9]{,2}-[0-9]{,2}" value="+7 ">
+				<div class="agreement">
+					<input type="checkbox" required="" name="agreementCheckbox" id="checkbox-agreement">
+					<label for="checkbox-agreement"><p class="agreement-article">I agree to the terms of processing personal data</p></label>
+				</div>
+				<input type="submit" name="bannerButton" class="banner-btn" value="Send">
+				<p class="success" style="display: none;">Готово, заявка сделана</p>
+			</form>
+		</div>
+	</div>
+
 	<div class="headerWrapper">
 		<div class="header-overlay"></div>		
 		<header>	
@@ -130,16 +149,18 @@
 		<div class="copyright-and-social">
 			<p class="copyright">© 2017-2020 Mass Impressions & Tranmautritam. Make the right impression.</p>
 			<div class="social">
-				<a href="https://facebook.com/" target="blank" class="social-btn"><img src="img/icons/social/facebook.png" alt="social"></a>
-				<a href="https://twitter.com/" target="blank" class="social-btn"><img src="img/icons/social/twitter.png" alt="social"></a>
-				<a href="https://plus.google.com/" target="blank" class="social-btn"><img src="img/icons/social/google-plus.png" alt="social"></a>
-				<a href="https://instagram.com/" class="social-btn" target="blank"><img src="img/icons/social/instagram.png" alt="social"></a>
+				<a href="https://facebook.com/" target="blank" class="social-btn"><img src="img/icons/social/facebook.png" alt="social" class="social-btn"></a>
+				<a href="https://twitter.com/" target="blank" class="social-btn"><img src="img/icons/social/twitter.png" alt="social" class="social-btn"></a>
+				<a href="https://plus.google.com/" target="blank" class="social-btn"><img src="img/icons/social/google-plus.png" alt="social" class="social-btn"></a>
+				<a href="https://instagram.com/" class="social-btn" target="blank"><img src="img/icons/social/instagram.png" alt="social" class="social-btn"></a>
 			</div>
 		</div>
 
 	</footer>
 
-<script src="jquery-3.3.1.min.js?speed=0"></script>
-<script src="js scripts/softScroll.js?speed=0"></script>
+<script src="jquery-3.3.1.min.js"></script>
+<script src="js scripts/softScroll.js"></script>
+<script src="js scripts/insert.js"></script>
+<!-- <script src="js scripts/click.js"></script> -->
 </body>
 </html>
