--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/plans.css">
     <link rel="stylesheet" href="./styles/map.css">
     <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700&display=swap&subset=latin-ext" rel="stylesheet">
